# falcon-genome

./: .gitignore  CMakeLists.txt  Jenkinsfile  Jenkinsfile-hwc  Jenkinsfile-intel  Jenkinsfile-local  Makefile  README.md  Test  config.mk  config.mk.template  jenkinsut  setup.sh
BATS-testing/: run.sh  settings.bash
BATS-testing/cases/: extra-opts-check.bats
cmake/: FindGoogle.cmake  FindJsonCPP.cmake
include/fcs-genome/: BackgroundExecutor.h  BamFolder.h  BamInput.h  Executor.h  LogUtils.h  SampleSheet.h  SampleSheet_UnitTest.h  Worker.h  classSampleSheet.h  common.h  config.h  log.h  workers.h
include/fcs-genome/workers/: BQSRWorker.h  BWAWorker.h  BlazeWorker.h  DOCWorker.h  (+20 more)
install/: setup.sh
picard-1.141/: .gitignore
scripts/: .gitignore  BaseRecalQueue.scala  P4_Markdups.sh  P5_BQSR.sh  P6_Generate_gVCF_perchr.sh  README.md  Readme.md  align.sh  analyzeCov.sh  baseRecal.sh  combineGVCF.sh  compareBAM.sh  compareVCF.sh  concatVCF.sh  fcs-genome  fcs-genome.bats  fcs-sh  fcs_genome  fcs_genome_HaplotypeCaller.sh  fcs_genome_align.sh  fcs_genome_bqsr.sh  fcs_genome_index.sh  fcs_genome_markdup.sh  fcs_genome_pipeline.sh  fcs_genome_printRead.sh  fcs_genome_split.sh  fcs_genome_test.sh  genotypeGVCF.sh  globals.sh  globals.sh.template  haploTC.sh  markDup.sh  pipeline.sh  pipeline_unified.sh  printReads.sh  run_cmd.sh  sort.sh  split.sh  vid.json
scripts/jccc/: common.sh  compute-manager  demux-agent  demux-manager  fcs_manager.py  get_mail.sh  mail-agent  rsync-agent  rsync-manager  settings.sh  settings.sh.template  ssheet-agent  ssheet-manager  start-all.sh  stop-all.sh  test-manager
scripts/manager/: .gitignore  Makefile  client.cpp  config.mk  manager.cpp
scripts/mutect2/: README.txt  mutect2.sh  mutect2_pipeline.sh
scripts/org/: P1_Generate_BAM_files.sh  P2_Check_BAM_files.sh  P3_Merge_BAM_files.sh  globals.sh
scripts/scripts_depth/: README.txt  cov.sh  cov_calculate.pl  cov_graph.py
scripts/stage-worker/: GenomicsDB_hostfile  HaplotypeCaller.sh  Wrapper.sh  align.sh  baseRecal.sh  baseRecal_contig.sh  baseRecal_sg.sh  combineGVCF.sh  common.sh  compressVCF.sh  concatVCF.sh  genotypeGVCF.sh  genotypeGVCF_part.sh  haploTC.sh  haploTC_chr.sh  haploTC_contig.sh  indelRealign_contig.sh  indelRealigner.sh  intvGen.sh  markDup.sh  printReads.sh  printReads_chr.sh  printReads_contig.sh  realignerTargetCreator.sh  unifiedGT.sh  unifiedGT_contig.sh  whole_indelRealigner.sh  wrapper.sh
src/: BackgroundExecutor.cpp  BamFolder.cpp  BamInput.cpp  Executor.cpp  FCSJson.cpp  LogUtils.cpp  SampleSheet.cpp  common.cpp  config.cpp  config.json  log.cpp  main.cpp  worker-align.cpp  worker-bqsr.cpp  worker-bqsr.h  worker-concat.cpp  worker-depth.cpp  worker-doc.cpp  worker-gatk.cpp  worker-germline.cpp  worker-hist.cpp  worker-htc.cpp  worker-indel.cpp  worker-joint.cpp  worker-json.cpp  worker-markdup.cpp  worker-mutect2.cpp  worker-sambamba.cpp  worker-ug.cpp  worker-vcf_filter.cpp
src/workers/: BQSRWorker.cpp  BWAWorker.cpp  BlazeWorker.cpp  CombineGVCFsWorker.cpp  DOCWorker.cpp  DepthCombineWorker.cpp  DepthWorker.cpp  GenotypeGVCFsWorker.cpp  HTCWorker.cpp  IndelWorker.cpp  MarkdupWorker.cpp  MergeBamWorker.cpp  Minimap2Worker.cpp  Mutect2FilterWorker.cpp  Mutect2Worker.cpp  PRWorker.cpp  SambambaWorker.cpp  SplitVCFbyIntervalWorker.cpp  SplitVCFbyIntervalsWorker.cpp  UGWorker.cpp  VCFConcatWorker.cpp  VCFUtilsWorker.cpp  VariantsFilterWorker.cpp
test/: BamInput_UnitTest.cpp  BamInput_UnitTest.h  CMakeLists.txt  SampleSheet_UnitTest.cpp  SampleSheet_UnitTest.h  TestConfig.cpp  TestExecutor.cpp  TestLog.cpp  TestWorker.cpp  global.bash  main.cpp  run-coverage.sh  run-mutect2.sh  settings.bash
test/DepthOfCoverage/baseline/: A15_bams.list.sample_gene_summary  A15_bams.list.sample_summary  CDMD1015_bams.list.sample_gene_summary  CDMD1015_bams.list.sample_summary  CDMD1021_bams.list.sample_gene_summary  CDMD1021_bams.list.sample_summary
test/DepthOfCoverage/baseline/withIntervals/: A15_bams.list.sample_summary
test/DepthOfCoverage/subject/: A15.sample_gene_summary  A15.sample_summary  CDMD1015.sample_gene_summary  CDMD1015.sample_summary  CDMD1021.sample_gene_summary  CDMD1021.sample_summary
test/bats/: run.sh  settings.bash.template
test/bats/cases/: extra-opts-check.bats
test/cases/: depth.bats  depthOfCoverage.bats  interval-list.bats  joint-extra-opts.bats  original-gatk-command.bats
test/mutect2/: mutect2.bats
test/resource/gatk-error1/: base-recalibration-20180730-180306.log.0  base-recalibration-20180730-180306.log.1  base-recalibration-20180730-180306.log.10  base-recalibration-20180730-180306.log.11  base-recalibration-20180730-180306.log.12  base-recalibration-20180730-180306.log.13  base-recalibration-20180730-180306.log.14  base-recalibration-20180730-180306.log.15  base-recalibration-20180730-180306.log.16  base-recalibration-20180730-180306.log.17  base-recalibration-20180730-180306.log.18  base-recalibration-20180730-180306.log.19  base-recalibration-20180730-180306.log.2  base-recalibration-20180730-180306.log.20  base-recalibration-20180730-180306.log.21  base-recalibration-20180730-180306.log.22  base-recalibration-20180730-180306.log.23  base-recalibration-20180730-180306.log.24  base-recalibration-20180730-180306.log.25  base-recalibration-20180730-180306.log.26  base-recalibration-20180730-180306.log.27  base-recalibration-20180730-180306.log.28  base-recalibration-20180730-180306.log.29  base-recalibration-20180730-180306.log.3  base-recalibration-20180730-180306.log.30  base-recalibration-20180730-180306.log.31  base-recalibration-20180730-180306.log.4  base-recalibration-20180730-180306.log.5  base-recalibration-20180730-180306.log.6  base-recalibration-20180730-180306.log.7  base-recalibration-20180730-180306.log.8  base-recalibration-20180730-180306.log.9
test/weekly/: fcs_genome.sh  fcs_test.bat  fcs_test.sh  fcs_test_mode.sh  settings.sh
tests/: run-daily.sh  settings.bash  settings.bash.template  test.sh  tests.sh
tests/daily/: commands.bats
tests/daily_tests/: commands.bats  pipeline.bats  test_helper.bash
(+85 files in other folders)
